--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   firebase_auth: ^4.16.0
   firebase_core: ^2.24.2
   email_validator: ^2.1.17
+  shared_preferences: ^2.2.3
 
 dev_dependencies:
   flutter_test:
